<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    tools:ignore="ExtraText">

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="161dp"
        tools:layout_editor_absoluteY="495dp" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="175dp"
        android:layout_height="162dp"
        android:contentDescription="@string/todo"
        app:srcCompat="@drawable/default_avatar_profile_icon_social_media_user_image_gray_blank_silhouette_vector_illustration_305504006_removebg_preview"
        tools:ignore="MissingConstraints,ImageContrastCheck"
        tools:layout_editor_absoluteX="127dp"
        tools:layout_editor_absoluteY="17dp" />

    <!-- Plain Text (TextView) to display the entered text -->

    <EditText
        android:id="@+id/inputEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/enter_some_text"
        android:minHeight="48dp"
        android:textColorHint="#8D6E63"
        tools:ignore="MissingConstraints,TextFields,VisualLintOverlap,VisualLintTextFieldSize"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="290dp"
        android:inputType="text"/>

    <Button
        android:id="@+id/submitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Okay"
        tools:ignore="MissingConstraints,VisualLintOverlap"
        tools:layout_editor_absoluteX="161dp"
        tools:layout_editor_absoluteY="437dp" />

    <TextView
        android:id="@+id/nameView"
        android:layout_width="218dp"
        android:layout_height="56dp"
        android:paddingTop="20dp"
        android:text=" name"
        android:textSize="18sp"
        tools:ignore="HardcodedText,MissingConstraints,TextSizeCheck,VisualLintOverlap"
        tools:layout_editor_absoluteX="127dp"
        tools:layout_editor_absoluteY="178dp" />

    <EditText
        android:id="@+id/txt"
        android:layout_width="260dp"
        android:layout_height="48dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="text"
        android:minHeight="48dp"
        android:text="@string/hello"
        tools:ignore="LabelFor,MissingConstraints"
        tools:layout_editor_absoluteX="80dp"
        tools:layout_editor_absoluteY="188dp" />

</androidx.constraintlayout.widget.ConstraintLayout>